# mlops-zoomcamp

./: README.md  pyproject.toml  requirements.txt
fcc-mlops/customer-satisfaction-mlops-main/: 1-pipelines.ipynb
fcc-mlops/customer-satisfaction-mlops-main/.zen/: config.yaml
fcc-mlops/customer-satisfaction-mlops-main/steps/: ingest_data.py
taxi/: README.md  duration_prediction.ipynb
