[project]
name = "mlops-zoomcamp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gregorywmorris", email = "gwm1980@gmail.com"},
]
dependencies = [
    "zenml>=0.57.0",
    "streamlit>=1.34.0",
    "pandas>=2.2.2",
    "ipykernel>=6.29.4",
    "numpy>=1.26.4",
    "scikit-learn>=1.4.2",
    "xgboost>=2.0.3",
    "lightgbm>=4.3.0",
    "catboost>=1.2.5",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "NONE"}


[tool.pdm]
distribution = false
